[Fix] Scene details uses pre to keep whitespace

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -27,3 +27,7 @@ body {
 #main-pagination {
   margin: 2em 0 1em 0;
 }
+
+.pre {
+  white-space: pre-line;
+}
